# utils/docs/swagger.yaml
@@ -16,19 +16,34 @@ definitions:
       updated_at:
         type: string
     type: object
-  requests.RegisterRequest:
+  requests.RegisterRequestStep1:
     properties:
       email:
+        example: joao@example.com
         type: string
       name:
+        example: João Silva
         minLength: 3
-        type: string
-      password:
-        minLength: 6
         type: string
     required:
     - email
     - name
+    type: object
+  requests.RegisterRequestStep2:
+    properties:
+      confirm_password:
+        example: senha123
+        type: string
+      hash:
+        example: 72fd3951e5bd758b7619ddc62af1f052
+        type: string
+      password:
+        example: senha123
+        minLength: 6
+        type: string
+    required:
+    - confirm_password
+    - hash
     - password
     type: object
   resources.UserResource:
@@ -45,18 +60,18 @@ definitions:
 info:
   contact: {}
 paths:
-  /api/register:
+  /api/register/step1:
     post:
       consumes:
       - application/json
-      description: Cria um novo usuário
+      description: Cria um novo usuário sem senha
       parameters:
       - description: Dados do usuário
         in: body
-        name: req
+        name: request
         required: true
         schema:
-          $ref: '#/definitions/requests.RegisterRequest'
+          $ref: '#/definitions/requests.RegisterRequestStep1'
       produces:
       - application/json
       responses:
@@ -64,7 +79,50 @@ paths:
           description: Usuário registrado
           schema:
             $ref: '#/definitions/resources.UserResource'
-      summary: Registrar usuário
+      summary: Registrar usuário (Step 1)
+      tags:
+      - Auth
+  /api/register/step2:
+    post:
+      consumes:
+      - application/json
+      description: Define a senha do usuário
+      parameters:
+      - description: Dados do usuário
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/requests.RegisterRequestStep2'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Senha definida
+          schema:
+            $ref: '#/definitions/resources.UserResource'
+      summary: Registrar usuário (Step 2)
+      tags:
+      - Auth
+  /api/send-validation-code:
+    post:
+      description: Envia código de validação para o e-mail fornecido.
+      parameters:
+      - description: E-mail do usuário
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: 'Código enviado" example="{\"message\": \"Código enviado com
+            sucesso\"}'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Envia código de validação
       tags:
       - Auth
   /api/users:
@@ -80,4 +138,30 @@ paths:
       summary: Listar usuários
       tags:
       - Users
+  /api/verify-validation-code:
+    post:
+      description: Verifica se o código de validação é válido.
+      parameters:
+      - description: E-mail do usuário
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      - description: Código de validação
+        in: body
+        name: code
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Código válido
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Verifica código de validação
+      tags:
+      - Auth
 swagger: "2.0"
